testdata/de/dm/intellij/liferay/language/jsp/LiferayJspJavaDeprecationInspectionTest/myimport.jsp
<%@ page import=<warning descr="User Operation and Importer/Exporter Classes and Utilities Moved or Removed. (see LPS-63205)">"<error descr="Cannot resolve class or package 'com'">com</error>.<error descr="Cannot resolve class or package 'liferay'">liferay</error>.<error descr="Cannot resolve class or package 'portal'">portal</error>.<error descr="Cannot resolve class or package 'kernel'">kernel</error>.<error descr="Cannot resolve class or package 'security'">security</error>.<error descr="Cannot resolve class or package 'exportimport'">exportimport</error>.<error descr="Cannot resolve class 'UserImporterUtil'">UserImporterUtil</error>"</warning> %>
